Endpoint de Validacion de organizacion
